--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="div"   style="padding: 5px; background-color: green;">
-        <button onclick="alert('Hola! (´｡• ᵕ •｡`)')">Saludar</button>
+        <button> Saludar ૮ ˶ᵔ ᵕ ᵔ˶ ა </button>
     </div>
 </body>
 </html>
